tdf#129808 sw: Extend leading for CJK fonts in DOC/DOCX files

Whenever Microsoft Word lays out text using a CJK font, it applies an
extra multiplier to the line height. This behavior depends only on the
font file itself; it doesn't matter whether the font is actually used as
the East Asian font or whether the text itself contains any CJK
characters. All that matters is whether the font self-reports as a CJK
font.

Microsoft Word makes this determination based on the OS/2 table's
uCodePageRange* field. If the font reports coverage for any of the
following code pages, the line height multiplier is applied:

- CP932 (JIS/Japan)
- CP936 (Simplied Chinese)
- CP949 (Korean Wansung encoding)
- CP950 (Traditional Chinese)

Previously, Writer would respect the original font metrics when laying
out DOC/DOCX files. This change makes Writer try to emulate Word's
behavior instead, subject to a compatibility flag.

Change-Id: I22e360db9bf633ae28846ec089e558fab5dd145d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190297
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>